--- a/gui/src/app/view/history/charts/charts.component.html
+++ b/gui/src/app/view/history/charts/charts.component.html
@@ -1,36 +1,21 @@
 <div class="header">
   <h1>Analysis</h1>
   <mat-divider></mat-divider>
-  </div>
+</div>
 
 <div class="content">
   <mat-card class="primary-card">
-
-          <canvas id="lineChart"></canvas>
-
+    <canvas id="lineChart"></canvas>
   </mat-card>
 
   <mat-card class="secondary-card">
+    <canvas id="doughnutChart" height="54" width="80"></canvas>
+  </mat-card>
 
-    <canvas id="doughnutChart"  height="54"
-    width="80"></canvas>
-
-</mat-card>
-
-   <mat-card class="primary-card">
-
-          <canvas id="barChart"></canvas>
-
+  <mat-card class="primary-card">
+    <canvas id="barChart"></canvas>
   </mat-card>
   <mat-card class="secondary-card">
-
-    <canvas id="radarChart"  height="54"
-    width="80"></canvas>
-
-</mat-card>
-
-  <!-- <mat-card class="primary-card" style="margin-top: 0.4em">
-      <mat-card-title>SAST</mat-card-title>
-      <mat-card-subtitle>OWASP TOP 10 VULNERABILITY TEST</mat-card-subtitle>
-         </mat-card> -->
+    <canvas id="radarChart" height="54" width="80"></canvas>
+  </mat-card>
 </div>
