--- a/gui/src/app/view/home/home.component.css
+++ b/gui/src/app/view/home/home.component.css
@@ -1,57 +1,50 @@
-mat-card
-{
+mat-card {
   background-color: rgba(24, 28, 47, 0.7);
-
 }
 
-.main-card{
+.main-card {
   width: 60%;
-display: flex;
-flex-wrap: wrap;
-height: 30%;
+  display: flex;
+  flex-wrap: wrap;
+  height: 30%;
   margin-bottom: 1%;
 }
 
-.summary-card{
+.summary-card {
   width: 19%;
   height: 7vw;
   margin-right: 1.5%;
-
 }
 
-.summary-val-icon-div{
+.summary-val-icon-div {
   width: 100%;
   display: flex;
   justify-content: space-around;
-
-
 }
 
-.card-icon{
+.card-icon {
   position: relative;
   top: -3vh;
   right: 2vh;
-font-size: 5em;
+  font-size: 5em;
 }
-.summary-div{
-
+.summary-div {
   display: flex;
   top: 25vw;
 }
 
-.timeline-card{
+.timeline-card {
   width: 40%;
   height: 28vh;
   margin-right: 1.2%;
-
 }
 
-.top10-card{
+.top10-card {
   width: 19%;
   height: 30vh;
 }
 
-.content{
+.content {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
 }
