--- a/gui/src/app/view/tools/tools.component.html
+++ b/gui/src/app/view/tools/tools.component.html
@@ -1,14 +1,14 @@
 <div class="header">
   <h1>Tools</h1>
   <mat-divider></mat-divider>
-  </div>
+</div>
 
-  <div class="content">
-    <mat-card class="primary-card">
- <mat-card-title>SAST</mat-card-title>
- <mat-card-subtitle>OWASP TOP 10 VULNERABILITY TEST</mat-card-subtitle>
- <button routerLink="top10" mat-fab class="run-button">
-  <mat-icon  inline=true style="font-size: 5vw; ">play_arrow</mat-icon>
-</button>
-    </mat-card>
+<div class="content">
+  <mat-card class="primary-card">
+    <mat-card-title>SAST</mat-card-title>
+    <mat-card-subtitle>OWASP TOP 10 VULNERABILITY TEST</mat-card-subtitle>
+    <button routerLink="top10" mat-fab class="run-button">
+      <mat-icon inline="true" style="font-size: 5vw; ">play_arrow</mat-icon>
+    </button>
+  </mat-card>
 </div>
