--- a/gui/src/app/app.component.html
+++ b/gui/src/app/app.component.html
@@ -1,15 +1,11 @@
-
-
-
-<mat-toolbar >
-    <div><button mat-icon-button>
-<img src="/assets/img/OWASP-Logo-White.png" width=60 alt="OWASP LOGO">
-    </button></div>
-    <span style="width: 2%"></span>
+<mat-toolbar>
+  <div>
+    <button mat-icon-button>
+      <img src="/assets/img/OWASP-Logo-White.png" width="60" alt="OWASP LOGO" />
+    </button>
+  </div>
+  <span style="width: 2%"></span>
   <div>RISK ASSESSMENT FRAMEWORK</div>
+</mat-toolbar>
 
-  </mat-toolbar>
-  
-  <!-- <app-login *ngIf="!isAuth"></app-login> -->
-  <app-navigation></app-navigation>
-
+<app-navigation></app-navigation>
