--- a/gui/src/app/view/home/home.component.html
+++ b/gui/src/app/view/home/home.component.html
@@ -1,40 +1,37 @@
 <div class="header">
   <h1>Welcome User,</h1>
-  <!-- <mat-divider></mat-divider> -->
+</div>
+
+<div class="content">
+  <div class="chart-container" style="height:20vh; width:60vw">
+    <canvas id="lineChart"></canvas>
   </div>
 
-  <div class="content">
-      <div class="chart-container" style="height:20vh; width:60vw">
-          <canvas id="lineChart"></canvas>
-      </div>
+  <div class="summary-div position-relative">
+    <mat-card class="summary-card">
+      <mat-card-subtitle>TOTAL SCANS</mat-card-subtitle>
 
-      <div class="summary-div position-relative">
-
- <mat-card class="summary-card" >
-    <mat-card-subtitle>TOTAL SCANS</mat-card-subtitle>
-
-    <div class="summary-val-icon-div">
+      <div class="summary-val-icon-div">
         <mat-card-title class="summary-value">2000</mat-card-title>
-        <mat-icon style="color: rgb(0, 153, 255)" class="card-icon"> track_changes</mat-icon>
-    </div>
-
-      </mat-card>
- <mat-card class="summary-card" >
-   <mat-card-subtitle>VULNERABILITIES</mat-card-subtitle>
-
-   <div class="summary-val-icon-div">
-      <mat-card-title class="summary-value">400</mat-card-title>
-      <mat-icon color="warn"style="" class="card-icon"> warning</mat-icon>
-  </div>
-      </mat-card>
- <mat-card class="summary-card" >
-   <mat-card-subtitle>REPORTS</mat-card-subtitle>
-   <div class="summary-val-icon-div">
-      <mat-card-title class="summary-value">20</mat-card-title>
-      <mat-icon style="color: yellowgreen" class="card-icon">dvr</mat-icon>
-  </div>
-      </mat-card>
-
+        <mat-icon style="color: rgb(0, 153, 255)" class="card-icon">
+          track_changes</mat-icon
+        >
       </div>
+    </mat-card>
+    <mat-card class="summary-card">
+      <mat-card-subtitle>VULNERABILITIES</mat-card-subtitle>
 
+      <div class="summary-val-icon-div">
+        <mat-card-title class="summary-value">400</mat-card-title>
+        <mat-icon color="warn" style="" class="card-icon"> warning</mat-icon>
+      </div>
+    </mat-card>
+    <mat-card class="summary-card">
+      <mat-card-subtitle>REPORTS</mat-card-subtitle>
+      <div class="summary-val-icon-div">
+        <mat-card-title class="summary-value">20</mat-card-title>
+        <mat-icon style="color: yellowgreen" class="card-icon">dvr</mat-icon>
+      </div>
+    </mat-card>
   </div>
+</div>
