--- a/gui/src/app/view/registration/registration.component.css
+++ b/gui/src/app/view/registration/registration.component.css
@@ -1,9 +1,7 @@
-
-.detail-card
-{
-width: fit-content;
-padding: 2%;
-align-items: center;
-margin-top: 3%;
-background-color: rgba(24, 28, 47, 0.7);
+.detail-card {
+  width: fit-content;
+  padding: 2%;
+  align-items: center;
+  margin-top: 3%;
+  background-color: rgba(24, 28, 47, 0.7);
 }
