--- a/gui/src/app/view/resources/dialog-component/dialog-component.component.html
+++ b/gui/src/app/view/resources/dialog-component/dialog-component.component.html
@@ -1,8 +1,10 @@
-<h1 mat-dialog-title>{{data.title}}</h1>
+<h1 mat-dialog-title>{{ data.title }}</h1>
 <div mat-dialog-content>
-  <div>{{data.subtitle}}</div>
-  <div>{{data.isVulnerablePara}}</div>
+  <div>{{ data.subtitle }}</div>
+  <div>{{ data.isVulnerablePara }}</div>
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="data.isVulnerablePara" cdkFocusInitial>Ok</button>
+  <button mat-button [mat-dialog-close]="data.isVulnerablePara" cdkFocusInitial>
+    Ok
+  </button>
 </div>
